--- a/index.html
+++ b/index.html
@@ -90,6 +90,84 @@
         </div>
       </div>
     </section>
+
+    <section class="mb-24">
+      <div class="grid grid-cols-1 lg:grid-cols-2">
+        <!-- image section -->
+        <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+          <div class="bg-gradient-to-r from-red-100 to-red-50 rounded-lg"></div>
+          <div class="bg-orange-50 rounded-lg row-span-2">
+            <img  class="mx-auto my-5" src="images/fresh-1.png" alt="">
+          </div>
+          <div class="bg-gray-200 rounded-lg row-span-2">
+            <img  class="mx-auto my-5" src="images/fresh-2.png" alt="">
+          </div>
+          <div class="bg-gradient-to-r from-gray-200 to-gray-100 rounded-lg"></div>
+        </div>
+        <!-- text section -->
+         <div>
+          <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+          <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <br>
+          <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
+          <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <br>
+          <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
+          <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+         </div>
+      </div>
+    </section>
+
+    <section class="mb-24">
+      <div class="text-white px-7 md:px-16 bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2">
+        <!-- text section -->
+        <div class="flex justify-center items-center overflow-hidden">
+          <div class="w-5/6">
+            <h1 class="text-5xl mb-5 my-10 font-bold">Meet Our Super Clients</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="text-orange-600 bg-white px-5 py-2 rounded-md my-5">Show All</button>
+        </div>
+        </div>
+         <!-- review card section -->
+          <div class="relative py-24">
+            <div class="absolute z-10 top-44">
+              <div class="-top-10 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5">
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png" alt="">
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
+                <small class="text-gray-500">Businessman</small>
+              </div>
+            </div>
+            </div>
+            <!-- top card -->
+            <div class="relative -top-10 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5 opacity-40 left-4 md:left-32">
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png" alt="">
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
+                <small class="text-gray-500">Businessman</small>
+              </div>
+            </div>
+            <!-- bottom card -->
+            <div class="relative opacity-40 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5 left-4 md:left-32">
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png" alt="">
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
+                <small class="text-gray-500">Businessman</small>
+              </div>
+            </div>
+          </div>
+           
+      </div>
+    </section>
   </main>
   <footer>
 
