--- a/index.html
+++ b/index.html
@@ -165,12 +165,40 @@
               </div>
             </div>
           </div>
-           
+      </div>
+    </section>
+
+    <section class="mb-24">
+      <div class="text-center">
+        <h1 class="font-extrabold text-5xl text-gray-800 mb-5">News & Events</h1>
+        <p class="text-gray-500 font-medium text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+      </div>
+      <div class="md:flex justify-evenly my-5 md:gap-5">
+        <div class="bg-white rounded-lg p-5 border mb-5">
+          <img class="mb-3 my-3" src="images/news-1.png" alt="">
+          <small class="mb-3 my-3">Feb 05, 2027</small>
+          <h2 class="mb-2 font-extrabold text-xl">Collecting 8 points for discount</h2>
+          <p class="mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+          <small class="font-bold text-base">Learn More</small>
+        </div>
+        <div class="bg-white rounded-lg p-5 border mb-5">
+          <img class="mb-3 my-3" src="images/news-1.png" alt="">
+          <small class="mb-3 my-3">Feb 05, 2027</small>
+          <h2 class="mb-2 font-extrabold text-xl">Collecting 8 points for discount</h2>
+          <p class="mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+          <small class="font-bold text-base">Learn More</small>
+        </div>
+        <div class="bg-white rounded-lg p-5 border mb-5">
+          <img class="mb-3 my-3" src="images/news-1.png" alt="">
+          <small class="mb-3 my-3">Feb 05, 2027</small>
+          <h2 class="mb-2 font-extrabold text-xl">Collecting 8 points for discount</h2>
+          <p class="mb-2">There are many variations of passages of Lorem Ipsum available.</p>
+          <small class="font-bold text-base">Learn More</small>
+        </div>
       </div>
     </section>
   </main>
-  <footer>
-
+  <footer class="h-32 bg-orange-100">
   </footer>
 </body>
 </html>
