--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,25 +25,29 @@
     }
   </script>
   <style>
-    .manrope-font{
-   font-family: "Manrope", sans-serif;
-}
+    .manrope-font {
+      font-family: "Manrope", sans-serif;
+    }
   </style>
 </head>
+
 <body class="manrope-font">
   <header class="max-w-7xl mx-auto items-center md:ml-12 sm:ml-1 lg:py-20 md:py-10 lg:flex">
-    <div class="p-10 space-y-8"> 
+    <div class="p-10 space-y-8">
       <div>
         <h1 class="font-extrabold text-7xl text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
         <h3 class="">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</h3>
       </div>
-      <button class="text-white font-bold text-xl rounded-lg bg-gradient-to-r from-orange-500 to-red-500 px-5 py-4">Explore More<i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+      <button
+        class="text-white font-bold text-xl rounded-lg bg-gradient-to-r from-orange-500 to-red-500 px-5 py-4">Explore
+        More<i class="fa-solid fa-arrow-right -rotate-45"></i></button>
     </div>
     <div class="relative">
       <div>
         <img src="images/banner.png" alt="banner">
       </div>
-      <div class="px-2 py-2 rounded-lg lg:left-28 md:left-32 top-28 md:top-80 flex items-center space-x-2 shadow-lg bg-white absolute ml-40">
+      <div
+        class="px-2 py-2 rounded-lg lg:left-28 md:left-32 top-28 md:top-80 flex items-center space-x-2 shadow-lg bg-white absolute ml-40">
         <div>
           <i class="fa-solid fa-star lg:text-3xl text-[#FFC850]"></i>
         </div>
@@ -57,7 +62,9 @@
     <section class="py-8 lg:py-24">
       <div class="text-center mb-8">
         <h1 class="text-gray-700 font-bold text-3xl md:text-4xl mb-5">Our Featured Products</h1>
-        <p class="text-gray-600 text-base font-medium max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <p class="text-gray-600 text-base font-medium max-w-xl mx-auto">There are many variations of passages of Lorem
+          Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised
+          words which don't look even slightly believable. </p>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-center">
         <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
@@ -97,81 +104,94 @@
         <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
           <div class="bg-gradient-to-r from-red-100 to-red-50 rounded-lg"></div>
           <div class="bg-orange-50 rounded-lg row-span-2">
-            <img  class="mx-auto my-5" src="images/fresh-1.png" alt="">
+            <img class="mx-auto my-5" src="images/fresh-1.png" alt="">
           </div>
           <div class="bg-gray-200 rounded-lg row-span-2">
-            <img  class="mx-auto my-5" src="images/fresh-2.png" alt="">
+            <img class="mx-auto my-5" src="images/fresh-2.png" alt="">
           </div>
           <div class="bg-gradient-to-r from-gray-200 to-gray-100 rounded-lg"></div>
         </div>
         <!-- text section -->
-         <div>
+        <div>
           <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
-          <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all
+            possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had
+            been deeply appreciated by its custoers because of good words of mouth and unique customized service
+            orginated from Taiwan.</p>
           <br>
           <h1 class="text-2xl font-bold mb-5">Unique Taste</h1>
-          <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist
+            impression</p>
           <br>
           <h1 class="text-2xl font-bold mb-5">Premium Quality</h1>
           <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
-         </div>
+        </div>
       </div>
     </section>
 
     <section class="mb-24">
-      <div class="text-white px-7 md:px-16 bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2">
+      <div
+        class="text-white px-7 md:px-16 bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2">
         <!-- text section -->
         <div class="flex justify-center items-center overflow-hidden">
           <div class="w-5/6">
             <h1 class="text-5xl mb-5 my-10 font-bold">Meet Our Super Clients</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <button class="text-orange-600 bg-white px-5 py-2 rounded-md my-5">Show All</button>
+          </div>
         </div>
-        </div>
-         <!-- review card section -->
-          <div class="relative py-24">
-            <div class="absolute z-10 top-44">
-              <div class="-top-10 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5">
+        <!-- review card section -->
+        <div class="relative py-24">
+          <div class="absolute z-10 top-44">
+            <div class="-top-10 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5">
               <div class="absolute -top-5 -left-5 bg-white rounded-full">
                 <img class="p-1" src="images/client.png" alt="">
               </div>
               <div>
-                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
-                <small class="text-gray-500">Businessman</small>
-              </div>
-            </div>
-            </div>
-            <!-- top card -->
-            <div class="relative -top-10 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5 opacity-40 left-4 md:left-32">
-              <div class="absolute -top-5 -left-5 bg-white rounded-full">
-                <img class="p-1" src="images/client.png" alt="">
-              </div>
-              <div>
-                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
-                <small class="text-gray-500">Businessman</small>
-              </div>
-            </div>
-            <!-- bottom card -->
-            <div class="relative opacity-40 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5 left-4 md:left-32">
-              <div class="absolute -top-5 -left-5 bg-white rounded-full">
-                <img class="p-1" src="images/client.png" alt="">
-              </div>
-              <div>
-                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the
+                  people who are interested to treatment</p>
                 <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
                 <small class="text-gray-500">Businessman</small>
               </div>
             </div>
           </div>
+          <!-- top card -->
+          <div
+            class="relative -top-10 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5 opacity-40 left-4 md:left-32">
+            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+              <img class="p-1" src="images/client.png" alt="">
+            </div>
+            <div>
+              <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to treatment</p>
+              <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
+              <small class="text-gray-500">Businessman</small>
+            </div>
+          </div>
+          <!-- bottom card -->
+          <div
+            class="relative opacity-40 bg-white h-56 text-black rounded-lg w-full md:w-3/4 flex items-center px-5 left-4 md:left-32">
+            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+              <img class="p-1" src="images/client.png" alt="">
+            </div>
+            <div>
+              <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the
+                people who are interested to treatment</p>
+              <h1 class="font-bold text-gray-800">Ilham Yuda</h1>
+              <small class="text-gray-500">Businessman</small>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="mb-24">
       <div class="text-center">
         <h1 class="font-extrabold text-5xl text-gray-800 mb-5">News & Events</h1>
-        <p class="text-gray-500 font-medium text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <p class="text-gray-500 font-medium text-base">There are many variations of passages of Lorem Ipsum available,
+          but the majority have suffered alteration in some form, by injected humour, or randomised words which don't
+          look even slightly believable. </p>
       </div>
       <div class="md:flex justify-evenly my-5 md:gap-5">
         <div class="bg-white rounded-lg p-5 border mb-5">
@@ -198,7 +218,105 @@
       </div>
     </section>
   </main>
-  <footer class="h-32 bg-orange-100">
+  <footer class=" bg-orange-100 py-8 px-6 md:px-16">
+    <div class="w-9/12 mx-auto">
+      <!-- logo -->
+      <div class="mb-8 flex justify-between items-center">
+        <img src="images/cup.png" alt="">
+        <div class="flex gap-8 items-center">
+          <h2>Ready to get strated?</h2>
+          <button
+            class="text-white font-bold text-sm rounded-lg bg-gradient-to-r from-orange-500 to-red-500 px-5 py-2">Get
+            Started</button>
+        </div>
+      </div>
+      <!-- links -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+        <!-- first colum -->
+        <div>
+          <h3 class="font-bold text-xl mb-3">Quick Links</h3>
+          <ul class="space-y-2">
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">Home</a>
+            </li>
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">About Us</a>
+            </li>
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">Insurance</a>
+            </li>
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">Privacy Policy</a>
+            </li>
+          </ul>
+        </div>
+        <!-- second colum -->
+        <div>
+          <h3 class="font-bold text-xl mb-3">Our Service</h3>
+          <ul class="space-y-2">
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">Life Insurance</a>
+            </li>
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">Car Insurance</a>
+            </li>
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">Health Insurance</a>
+            </li>
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">House Insurance</a>
+            </li>
+          </ul>
+        </div>
+        <!-- third colum -->
+        <div>
+          <h3 class="font-bold text-xl mb-3">Help</h3>
+          <ul class="space-y-2">
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">FAQs</a>
+            </li>
+            <li>
+              <a class="hover:bg-red-500 hover:font-bold hover:py-1 hover:rounded hover:px-2 hover:text-white"
+                href="">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <!-- 4th column -->
+        <div>
+          <h1 class="font-semibold text-2xl mb-8">Subscribe to our<br> newsletter</h1>
+          <div class="flex justify-between items-center border-b-2 border-black pb-5">
+            <small>Email address</small>
+            <i class="fa-solid fa-greater-than text-sm text-white bg-red-500 rounded-full px-1"></i>
+          </div>
+          <div>
+            <ul class="flex gap-8 my-8">
+              <li>
+                <a href="#"><i class="fa-brands fa-facebook-f text-xl"></i></a>
+              </li>
+              <li>
+                <i class="fa-brands fa-twitter text-xl"></i>
+              </li>
+              <li>
+                <i class="fa-brands fa-instagram text-xl"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="text-center my-5">
+      <small class="font-bold text-gray-500">© 2027 UIDesign.to - All rights reserved.</small>
+    </div>
   </footer>
 </body>
+
 </html>
