update tea house

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
 </head>
 
-<body class="manrope-font">
+<body class="font-manrope">
   <header class="max-w-7xl mx-auto items-center md:ml-12 sm:ml-1 lg:py-20 md:py-10 lg:flex">
     <div class="p-10 space-y-8">
       <div>
@@ -293,9 +293,9 @@
         <!-- 4th column -->
         <div>
           <h1 class="font-semibold text-2xl mb-8">Subscribe to our<br> newsletter</h1>
-          <div class="flex justify-between items-center border-b-2 border-black pb-5">
-            <small>Email address</small>
-            <i class="fa-solid fa-greater-than text-sm text-white bg-red-500 rounded-full px-1"></i>
+          <div class="flex items-center">
+            <input class="bg-transparent border-b-2 border-black pb-5 w-4/6" type="email" placeholder="Email Address" name="" id="">
+            <i class="fa-solid fa-chevron-right flex items-center w-7 h-7 text-white bg-orange-600 rounded-full justify-center"></i>
           </div>
           <div>
             <ul class="flex gap-8 my-8">
